static/css/thing.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
.thing {
  width: 12.8rem;
  text-align: center;
  margin: 1rem;
  display: inline-block;
  text-decoration: none;
  color: white;
}

.thing-icon {
  width: 12.8rem;
  height: 12.8rem;
  background-size: 12.8rem;
  background-repeat: no-repeat;
  background-image: url('../images/unknown-thing.png');
}

.thing-detail-container {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -5rem;
  margin-top: -5rem;
}

.thing-detail {
  width: 10rem;
  height: 10rem;
  border-radius: 5rem;
  border: 2px solid white;
  background: #88B6D6;
  position: relative;
}

.thing-detail-contents {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.thing-detail-label {
  text-align: center;
  width: 10rem;
}

.thing-name {
  color: white;
  font-size: 1.3rem;
  display: block;
  width: 12.8rem;
  height: 3.6rem;
  overflow: hidden;
  margin: 0.5rem 0;
}


/* On/Off Switch */

.on-off-switch .thing-icon {
  background-image: url('../images/on-off-switch.png');
}

.on-off-switch.on .thing-icon {
  background-image: url('../images/on-off-switch-on.png');
}

.on-off-switch.off .thing-icon {
  background-image: url('../images/on-off-switch-off.png');
}

/* Binary Sensor */

.binary-sensor .thing-icon {
  background-image: url('../images/binary-sensor.png');
}

.binary-sensor.on .thing-icon {
  background-image: url('../images/binary-sensor-on.png');
}

.binary-sensor.off .thing-icon {
  background-image: url('../images/binary-sensor-off.png');
}

/* Color Light */

.color-light-onoff-label, .color-light-label {
  text-transform: uppercase;
}

.color-light-onoff-label {
  padding-top: 0.5rem;
}

.color-light-container.on .on-off-switch-switch {
  background: white;
  color: #5d9bc7;
}

.color-light-icon-path {
  fill: #ffffff;
}

.color-light.bright-color .color-light-icon-path {
  fill: #444444;
}

.color-light.bright-color {
  color: #444444;
}

.color-light {
  width: 12.8rem;
  height: 12.8rem;
  border-radius: 6.4rem;
  border: 2px solid white;
  text-align: center;
  display: inline-block;
  transform: translate(0, 0); /* promote to layer to draw above links */
}

.color-light-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.thing-detail-layout-links {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.thing-detail-layout-link {
  stroke: white;
  stroke-width: 2px;
}

